fix flex wrap switch to row +roll

--- a/TIKI - FLEX/css/style.css
+++ b/TIKI - FLEX/css/style.css
@@ -18,6 +18,7 @@ body {
 img {
 
     vertical-align: top;
+    max-width: 100%;
 }
 
 .mg-b {
@@ -34,12 +35,12 @@ img {
     height: 56px;
 }
 
-/* .header-top {
+.header-top {
     display: flex;
     background-color: #1ba8ff;
     padding: 11px 8px;
     flex-direction: row;
-} */
+}
 
 .header-top a {
     display: flex;
@@ -68,8 +69,9 @@ img {
 .search {
     position: relative;
     display: flex;
-    align-self: auto;
-    flex: 1 1 auto;
+    /* align-self: auto;
+    flex: 1 1 auto; */
+    flex-grow: 1;
 }
 
 .text-input {
@@ -129,7 +131,7 @@ img {
 .list-first .item {
 
     width: calc(100%/3);
-    padding: 0 8px;
+    padding: 0 14px;
 
 }
 
@@ -154,15 +156,18 @@ img {
     display: flex;
     margin-bottom: 10px;
     flex-wrap: wrap;
+    overflow: auto;
 }
 
 .list-first {
     display: flex;
-    flex-wrap: wrap;
+    flex: none;
+    overflow-y: auto;
+    /* flex-wrap: wrap; */
 }
 
 .content-service .item {
-    width: calc(100%/3);
+    /* width: calc(100%/3); */
     padding: 0 8px;
     text-align: center;
 }
@@ -170,7 +175,7 @@ img {
 .content-service .list {
     margin-bottom: 10px;
     display: flex;
-    flex-wrap: wrap;
+    flex: none;
 }
 
 .content-service img {
@@ -183,6 +188,8 @@ img {
     align-items: center;
     padding: 8px 16px;
     text-decoration: none;
+    justify-content: space-around;
+    margin-bottom: 10px;
 
 }
 
@@ -240,30 +247,41 @@ img {
     border-radius: 3px;
     padding: 6px;
     color: #8c8a8c;
+    white-space: nowrap;
+}
+
+.mostsearch {
+    overflow-y: auto;
 }
 
 .mostsearch-1 {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     margin-bottom: 10px;
 
 }
 
 .mostsearch-1 span {
-    margin: 10px;
+    margin-left: 10px;
     color: #313431;
 }
 
 /* .................................... */
 .row {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    overflow-y: auto;
 }
 
+.list-deal-1 .row {
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto;
+}
 
 .list-product .item-deal {
-    flex-basis: 50%;
-
+    flex: none;
+    width: 50%;
 }
 
 .row a {
@@ -323,10 +341,6 @@ img {
     font-weight: 600;
     background: #f2f2f2;
     flex-basis: 100%;
-}
-
-.list-deal img {
-    max-width: 100%;
 }
 
 .wraper {
